syntax = "proto3";

import "google/protobuf/empty.proto";

package agent;

service Agent {
  rpc StoreCertificate (Request) returns (google.protobuf.Empty);
}

message Request {
  bytes public_key_data = 1;
  string public_key_path = 2;
  bytes private_key_data = 3;
  string private_key_path = 4;
  bytes ca_data = 5;
  string ca_path = 6;
}
